CARD-59: Main: fix logo flickering on initial load

--- a/app/styles/views/countrymenu.scss
+++ b/app/styles/views/countrymenu.scss
@@ -1,4 +1,6 @@
 .view-country-menu {
+  visibility: hidden; // TODO: remove
+
   font-size: 1rem;
   position: relative;
 
